deps/jansson/test/suites/invalid/object-unterminated-value/error.normal
1 7 7
unexpected newline near '"a'
